Sigo con los test de Sistema de alquiler